Changes in package.json

--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "1.0.0",
   "description": "Compatibility Checker for Yuba Bicycles",
   "main": "app.js",
-  "scripts" :
-  {
-    "start": "node app.js"
+  "scripts" : {
+    "build": "node app.js"
   },
   "repository": {
     "type": "git",
