added vercel.json for deployment, changes in package.json

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/n/a.git"
   },
-  "author": "Isaac Rico, Timothy De La Fuente",
+  "author": "Isaac Rico",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/n/a/issues"
